syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";

option java_multiple_files = true;
option java_package = "com.github.mangila.pokedex.backstage.model.grpc.mongodb";

message PokemonSpeciesPrototype {
  int32 id = 1;
  string name = 2;
  string generation = 3;
  repeated PokemonNamePrototype names = 4;
  repeated PokemonDescriptionPrototype descriptions = 5;
  repeated PokemonGeneraPrototype genera = 6;
  repeated PokemonEvolutionPrototype evolutions = 7;
  repeated PokemonPrototype varieties = 8;
  PokemonSpecialPrototype special = 9;
}

message PokemonDescriptionPrototype {
  string description = 1;
  string language = 2;
}

message PokemonPrototype {
  int32 id = 1;
  string name = 2;
  bool isDefault = 3;
  string height = 4;
  string weight = 5;
  repeated string types = 6;
  repeated PokemonStatPrototype stats = 7;
  repeated PokemonMediaPrototype media = 8;
}

message PokemonEvolutionPrototype {
  int32 order = 1;
  string name = 2;
}

message PokemonGeneraPrototype {
  string genera = 1;
  string language = 2;
}

message PokemonNamePrototype {
  string name = 1;
  string language = 2;
}

message PokemonSpecialPrototype {
  bool isSpecial = 1;
  bool legendary = 2;
  bool mythical = 3;
  bool baby = 4;
}

message PokemonStatPrototype {
  string name = 1;
  int32 value = 2;
}

message PokemonMediaPrototype {

}